new environment names; qed marks

--- a/make.tex
+++ b/make.tex
@@ -12,6 +12,8 @@
 \usepackage{amsfonts}
 \usepackage{amssymb}
 \usepackage{amsthm}
+\usepackage{thmtools}
+%\usepackage{mathrsfs} % Example: \mathscr{A}
 %\usepackage{siunitx}
 %\usepackage[mathscr]{euscript} % For scripted letters in maths
 \usepackage[all,error]{onlyamsmath}
@@ -59,29 +61,34 @@
 \newcommand{\CHESS}{\emph{CHESS}}
 \newcommand{\derive}[2]{\ensuremath{#1\vdash #2}}
 %%%%%%%%%%%%%%%%%%%% For maths
-\theoremstyle{definition}
-\newtheorem{ax}{Axiom}[section]
-\newtheorem{cor}{Corollary}[section]
-\newtheorem{defn}{Definition}[section]
-\newtheorem*{di}{Discussion}
-\newtheorem{ex}{Example}[section]
-\newtheorem{exer}{Exercise}[subsection]
-\newtheorem{lemma}{Lemma}[section]
-\newtheorem*{note}{Note}
-\newtheorem{prop}{Proposition}[section]
-\newtheorem*{remark}{Remark}[section]
-\newtheorem{thm}{Theorem}[subsection]
-\crefname{ax}{axiom}{axioms}
-\crefname{cor}{corollary}{corollaries}
-\crefname{defn}{definition}{definitions}
-\crefname{di}{discussion}{discussions}
-\crefname{ex}{example}{examples}
-\crefname{exer}{exercise}{exercises}
+\declaretheorem[style=definition,qed=\(\blacksquare\),parent=subsection]{axiom}
+\declaretheorem[style=definition,qed=\(\blacksquare\),sibling=axiom]{corollary}
+\declaretheorem[style=definition,qed=\(\blacksquare\),sibling=axiom]{definition}
+\declaretheorem[style=definition,qed=\(\blacksquare\),sibling=axiom]{discussion}
+\declaretheorem[style=definition,qed=\(\blacksquare\),sibling=axiom]{example}
+\declaretheorem[style=definition,qed=\(\blacksquare\),sibling=axiom]{exercise}
+\declaretheorem[style=definition,qed=\(\blacksquare\),sibling=axiom]{lemma}
+\declaretheorem[style=definition,qed=\(\blacksquare\),sibling=axiom]{note}
+\declaretheorem[style=definition,qed=\(\blacksquare\),sibling=axiom]{proposition}
+\declaretheorem[style=definition,qed=\(\blacksquare\),sibling=axiom]{remark}
+\declaretheorem[style=definition,qed=\(\blacksquare\),sibling=axiom]{theorem}
+\crefname{axiom}{axiom}{axioms}
+\crefname{corollary}{corollary}{corollaries}
+\crefname{definition}{definition}{definitions}
+\crefname{discussion}{discussion}{discussions}
+\crefname{example}{example}{examples}
+\crefname{exercise}{exercise}{exercises}
 \crefname{lemma}{lemma}{lemmas}
 \crefname{note}{note}{notes}
-\crefname{prop}{propositions}{propositions}
+\crefname{proposition}{proposition}{propositions}
 \crefname{remark}{remark}{remarks}
-\crefname{thm}{theorem}{theorems}
+\crefname{theorem}{theorem}{theorems}
+% Abbreviations for sets of numbers
+\newcommand{\N}{\ensuremath{\mathbf{N}}}
+\newcommand{\Z}{\ensuremath{\mathbf{Z}}}
+\newcommand{\Q}{\ensuremath{\mathbf{Q}}}
+\newcommand{\R}{\ensuremath{\mathbf{R}}}
+\newcommand{\C}{\ensuremath{\mathbf{C}}}
 %%%%%%%%%%%%%%%%%%%% Other options
 %\doublespacing % Use with the ``setspace'' package
 %\onehalfspacing % Use with the ``setspace'' package
