--- a/introduction.tex
+++ b/introduction.tex
@@ -1,4 +1,4 @@
-\begin{remark}[]
+\begin{remark}
 %\label{remark:}
 In this book, \term{predicate language} is used as a synonym of \term{first-order language}, and \term{constructive logic} is used as a synonym of \term{intuitionistic logic}.
 \end{remark}
@@ -96,17 +96,17 @@ The rules allow passing from some propositions of \CHESS\ to some other ones.
 Starting with the axiom and iterating moves allowed by the rules we obtain theorems of \CHESS.
 Thus, theorems of \CHESS\ are defined as all the possible positions (i.e.,, propositions of \CHESS) that can be obtained from the initial position (the axiom of \CHESS) by moving pieces according to the rules of the game (i.e.,, by ``proving'' via the inference rules of \CHESS).
 
-\begin{exer}
+\begin{exercise}
 Could you provide an unprovable proposition of \CHESS?
-\end{exer}
+\end{exercise}
 
 Why is \CHESS\ called a formal theory? When somebody offers a ``mathematical text'' P as a proof of a theorem A in \CHESS, this means that P is a record of some chess-game stopped in the position A.
 Checking the correctness of such ``proofs'' is a boring, but an easy task.
 The rules of the game are formulated precisely enough---we could write a computer program that will execute this task.
 
-\begin{exer}
+\begin{exercise}
 Try estimating the size of this program in some programming language.
-\end{exer}
+\end{exercise}
 
 Our second example of a formal theory is only a bit more serious.
 It was proposed by Paul Lorenzen\footnote{\url{http://en.wikipedia.org/wiki/Paul\_Lorenzen}}, let us call this theory \(L\).
@@ -120,35 +120,35 @@ a \underset{\text{rule1}}{\vdash} ab \underset{\text{rule2}}{\vdash} aaba \under
 \]
 This fact is expressed usually as \derive{L}{aababb} ( ``\(L\) proves \(aababb\)'', \(\vdash\) being a ``fallen T'').
 
-\begin{exer}
+\begin{exercise}
 (a) Verify that \(L\) is a formal theory.
 (Hint: describe an algorithm allowing to determine, is a sequence of propositions of \(L\) a correct proof, or not.)
 (b) (P.~Lorenzen) Verify the following property of theorems in \(L\): for any \(X\), if \derive{L}{X}, then \derive{L}{aaX}.
-\end{exer}
+\end{exercise}
 
 One of the most important properties of formal theories is given in the following
 
-\begin{exer}
+\begin{exercise}
 Show that the set of all theorems of a formal theory is effectively enumerable, i.e.,, show that, for any formal theory \(T\), a computer program \(P_T\) can be written that prints out on an (endless) paper tape all theorems of this theory (and nothing else).
 (Hint: we will call \(T\) a formal theory, if and only if we can present an algorithm for checking texts as correct proofs via principles of reasoning of \(T\).
 Thus, assume, you have 4 functions: GenerateFirstText()---returns Text, GenerateNextText()---returns Text, IsCorrectProof(Text)---returns true or false, ExtractTheorem(Text)---returns Text, you must implement the functions GenerateFirstTheorem()---returns Text, GenerateNextTheorem()---returns Text).
 
 Unfortunately, such programs cannot solve the problem that the mathematicians are mainly interested in: is a given proposition \(A\) provable in T or not? When, running the program \(P_T\) on a computer, we see our proposition \(A\) printed out, this means that \(A\) is provable in \(T\).
 Still, in general, until that moment we cannot know in advance whether \(A\) will be printed out some time later or it will not be printed at all.
-\end{exer}
+\end{exercise}
 
 \begin{note}
 According to the official terminology, effectively enumerable sets are called ``recursively enumerable sets'', in some texts---also ``listable sets''.
 \end{note}
 
-\begin{exer}\label{Lsolvable}
+\begin{exercise}\label{Lsolvable}
     \begin{inparaenum}[(a)]
         \item Describe an algorithm determining whether a proposition of \(L\) is a theorem or not.
         \item Could you imagine such an algorithm for the theory \CHESS?
         Of course, you can, yet \ldots
         Thus you see that even, having a relatively simple algorithm for \emph{checking correctness} of proofs, the problem of \emph{provability} can appear to be a very complicated one.
     \end{inparaenum}
-\end{exer}
+\end{exercise}
 
 \(T\) is called a \term{solvable theory} (more precisely---\term{effectively solvable}), if and only if there is an algorithm allowing to check whether some proposition is provable by using the principles of \(T\) or not.
 In \cref{Lsolvable}a you proved that \(L\) is a solvable theory.
@@ -173,17 +173,17 @@ Normally, mathematical theories contain the negation symbol not. In such theorie
 
 In the case d) we may sit forever by our computer, yet nothing interesting will happen: using the principles of T one can neither prove nor disprove the proposition A, and for this reason such a theory is called an incomplete theory. The famous incompleteness theorem proved by Kurt G\"{o}del\footnote{\url{http://www-history.mcs.st-andrews.ac.uk/Mathematicians/Godel.html}} in 1930 says that most mathematical theories are either inconsistent or incomplete (see Mendelson [1997] or click here).
 
-\begin{exer}
+\begin{exercise}
 Show that any (simultaneously) consistent and complete formal theory is solvable. (Hint: use the program of the Exercise 1.1.4, i.e., assume that you have the functions GenerateFirstTheorem() --- returns Text, GenerateNextTheorem() --- returns Text, and implement the function IsProvable(Text) - returns true or false). Where the consistency and completeness come in?
-\end{exer}
+\end{exercise}
 
-\begin{exer}
+\begin{exercise}
 \begin{inparaenum}[(a)]
     \item Verify that ``fully axiomatic theories'' are formal theories in the sense of the above general definition.
     (Hint: assume, that you have the following functions: GenerateFirstText() --- returns Text, GenerateNextText() --- returns Text, IsPropositon(Text) --- returns true or false, IsAxiom(Proposition) --- returns true or false, there is a finite list of inference rule names: \({R_1, \ldots, R_n}\), function Apply(RuleName, ListOfPropositions) --- returns Proposition or false, and you must implement the functions IsCorrectProof(ListOfPropositions) --- returns true or false, ExtractTheorem(Proof) --- returns Proposition).
     \item (for smart students) What, if, instead of \({R_1, \ldots, R_n}\), we would have an infinite list of inference rules, i.e., functions GenerateFirstRule(), GenerateNextRule() returning RuleName?
 \end{inparaenum}
-\end{exer}
+\end{exercise}
 
 \subsection{Predicate Languages}
 
@@ -243,22 +243,22 @@ x, y, z, x_1, y_1, z_1, \ldots
 \]
 The above-mentioned ``domain'' is the intended ``range'' of all these variables.
 
-\begin{ex}[]
+\begin{example}
 %\label{ex:}
 Building a language that should describe the ``domain of people'', we must start by introducing the ``variables for people'': \(x\) denotes an arbitrary person.
 % FIXME: add diagram
 ``Domain of people'' represented as a UML class diagram
-\end{ex}
+\end{example}
 
-\begin{ex}[]
+\begin{example}
 %\label{ex:}
 Building the language of the so-called \term{first-order arithmetic}, we are thinking about ``all natural numbers'' as the range of variables: \(0, 1, 2, 3, 4, \ldots\) (\(x\) denotes an arbitrary natural number).
-\end{ex}
+\end{example}
 
-\begin{ex}[]
+\begin{example}
 %\label{ex:}
 Building the language of \term{set theory}, we think about ``all sets'' as the range of variables: \(x\) denotes an arbitrary set.
-\end{ex}
+\end{example}
 
 \begin{note}
 Since our screens and printers allow only a limited number of pixels per inch, in principle, we
@@ -272,39 +272,39 @@ x, xx, xxx, xxxx, xxxxx, \ldots
 
 The next possibility we may wish to have in our language are the so-called \term{object constants} (sometimes called individual constants, constant letters, or simply, constants)---names or symbols denoting some specific ``objects'' of our ``domain''.
 
-\begin{ex}[]
+\begin{example}
 %\label{ex:}
 In our ``language for people'' we may introduce constants denoting particular people: John, Britney etc.
-\end{ex}
+\end{example}
 
-\begin{ex}[]
+\begin{example}
 %\label{ex:}
 In the language of first-order arithmetic, we may wish to introduce two constants---0 and 1 to denote ``zero'' and ``one''---two natural numbers having specific properties.
-\end{ex}
+\end{example}
 
-\begin{ex}[]
+\begin{example}
 %\label{ex:}
 In the language of set theory, we could introduce a constant denoting the empty set, but there is a way to do without it as well (for details, click here).
-\end{ex}
+\end{example}
 
 \subsubsection*{Function Constants}
 
 In some languages we may need also the so-called \term{function constants} (sometimes called function letters)---names or symbols denoting specific functions, i.e., mappings between ``objects'' of our ``domain'', or operations on these objects.
 
-\begin{ex}[]
+\begin{example}
 %\label{ex:}
 In our ``language for people'' we will not use function constants.
-\end{ex}
+\end{example}
 
-\begin{ex}[]
+\begin{example}
 %\label{ex:}
 In the language of first-order arithmetic, we will introduce only two function constants ``\(+\)'' and ``\(\cdot\)'' denoting the usual addition and multiplication of natural numbers, i.e., the two-argument functions \(x+y\) and \(x\cdot y\).
-\end{ex}
+\end{example}
 
-\begin{ex}[]
+\begin{example}
 %\label{ex:}
 In the language of set theory, we could introduce function constants denoting set intersections \(x\cap y\), unions \(x\cup y\), set differences \(x\setminus y\), power sets \(\mathcal{P}(x)\) etc., but there is a way to do without these symbols as well (for details, click here\footnote{\url{http://www.ltn.lv/~podnieks/gt2.html}}).
-\end{ex}
+\end{example}
 In mathematics, normally, we are writing \(f(x,y)\) to denote the value of the function \(f\) for the argument values \(x,y\).
 This (the so-called ``prefix'' notation\footnote{\url{https://en.wikipedia.org/wiki/Polish\_notation}}) is a uniform way suitable for functions having any number of arguments: \(f(x)\), \(g(x,y)\), \(h(x,y,z)\) etc.
 In our everyday mathematical practice some of the two-argument functions (in fact, operations) are represented by using the more compact ``infix'' notation\footnote{\url{https://en.wikipedia.org/wiki/Infix\_notation}} \((x+y\), \(x\cdot y\) instead of the uniform \(+(x, y)\), \(\cdot(x, y)\), etc.).
@@ -323,7 +323,7 @@ Properties are, in fact, unary (i.e., one-argument) ``predicates'', for example,
 Relations are, in fact, two- or more-argument ``predicates'', for example, ``\(x\) is better than \(y\)'', or ``\(x\) sends \(y\) to \(z\)''.
 \end{note}
 
-\begin{ex}[]
+\begin{example}
 %\label{ex:}
 In our ``language for people'' we will use the following predicate constants (see the class diagram above):
 \begin{itemize}
@@ -339,9 +339,9 @@ The first two constants represent, in fact, ``properties'' (or, ``classes'') of 
 The remaining four constants represent ``relations'' between our objects.
 The term ``predicate'' is used to include both versions.
 We do not introduce \(\mathrm{Person}(x)\) as a predicate because our domains consists of persons only.
-\end{ex}
+\end{example}
 
-\begin{ex}[]
+\begin{example}
 %\label{ex:}
 It may seem strange to non-mathematicians, yet the most popular relation of objects used in most mathematical theories, is equality (or identity).
 Still, this is not strange for mathematicians.
@@ -352,13 +352,13 @@ Many of discoveries in mathematics could be reduced to this form.
 In the language of first-order arithmetic, equality ``\(=\)'' is the only necessary predicate constant.
 Other ``basic'' relations must be reduced to equality.
 For example, the relation \(x<y\) for natural numbers \(x\), \(y\) can be reduced to equality by using the addition function and the formula \(\exists z(x+z+1=y)\).
-\end{ex}
+\end{example}
 
-\begin{ex}[]
+\begin{example}
 %\label{ex:}
 In the language of set theory a specific predicate constant ``in'' denotes the set membership relation: ``\(x\) in \(y\)'' means ``\(x\) is a member of \(y\)''.
 The equality predicate \(x=y\) also will be used---it means ``the sets \(x\) an \(y\) possess the same members''.
-\end{ex}
+\end{example}
 
 The uniform way of representing suitable for predicates having any number of arguments is again the ``prefix'' notation: \(p(x)\), \(q(x, y)\), \(r(x, y, z)\) etc.
 In the real mathematical practice, some of the two-argument predicates are represented by using the more compact ``infix'' notation (so \(x=y\) instead of the uniform \(=(x, y)\), etc.).
@@ -382,7 +382,7 @@ Thus, the specification of a predicate language includes the following \term{pri
 
 Different sets of primitives yield different predicate languages. The remaining part of the language definition is common for all predicate languages.
 
-\begin{ex}[]
+\begin{example}
 %\label{ex:}
 Our ``language for people'' is based on:
 \begin{inparaenum}[(a)]
@@ -391,9 +391,9 @@ Our ``language for people'' is based on:
     \item function constants: none;
     \item predicate constants: Male(x), Female(x), Mother(x, y), Father(x, y), Married(x, y), x=y.
 \end{inparaenum}
-\end{ex}
+\end{example}
 
-\begin{ex}[]
+\begin{example}
 The language of first-order arithmetic is based on: 
 
 \begin{inparaenum}[(a)]
@@ -402,9 +402,9 @@ The language of first-order arithmetic is based on:
     \item function constants: \(x+y\), \(x\cdot y\);
     \item predicate constant: \(x=y\).
 \end{inparaenum}
-\end{ex}
+\end{example}
 
-\begin{ex}[]
+\begin{example}
 %\label{ex:}
 The language of set theory is based on:
 
@@ -414,7 +414,7 @@ The language of set theory is based on:
     \item function constants: none;
     \item predicate constants: \(x\) in \(y\) (\(x\in y\)), \(x=y\).
 \end{inparaenum}
-\end{ex}
+\end{example}
 
 \subsubsection*{Terms and formulas}
 
@@ -427,19 +427,19 @@ By using the language primitives, we can build terms, atomic formulas and (compo
     \item There are no other terms.
 \end{enumerate}
 
-\begin{ex}[]
+\begin{example}
 In our ``language for people'' only variables \(x, y, z, \ldots\), and object constants John, Britney, \ldots\ are terms.
-\end{ex}
+\end{example}
 
-\begin{ex}[]
+\begin{example}
 In the language of first-order arithmetic, for addition and multiplication the ``infix'' notation is used: if \(t_1\), \(t_2\) are terms, then \((t_1+t_2)\) and \((t_1\cdot t_2)\) are terms.
 Of course, the object constants 0, 1 and variables \(x, y, z, \ldots\) are terms.
 Examples of more complicated terms: \((x+y)\), \(((1+1)\cdot (1+1))\), \((((1+1)\cdot x)+1)\).
-\end{ex}
+\end{example}
 
-\begin{ex}[]
+\begin{example}
 In the language of set theory, variables \(x, y, z, \ldots\)  are the only kind of terms.
-\end{ex}
+\end{example}
 
 If a term does not contain variable names, then it denotes an ``object'' of our ``domain'' (for example, \(((1+1)+1)\) denotes a specific natural number---the number 3).
 If a term contains variables, then it denotes a function.
@@ -457,12 +457,12 @@ In predicate languages, assertions are called \term{formulas} (or, sometimes, we
 \end{enumerate}
 For the equality symbol, the ``infix'' notation is used: if \(t_1\), \(t_2\) are terms, then \((t_1=t_2)\) is an atomic formula.
 
-\begin{ex}[]
+\begin{example}
 %\label{ex:}
 In our ``language for people'', the following are examples of atomic formulas: Male(x), Female(Britney), Male(Britney) (not all formulas that are well formed, must be true!), Father(x, Britney), Mother(Britney, John), Married(x, y).
-\end{ex}
+\end{example}
 
-\begin{ex}[]
+\begin{example}
 %\label{ex:}
 Summary of the atomic formulas of the language of first-order arithmetic:
 
@@ -471,12 +471,12 @@ Summary of the atomic formulas of the language of first-order arithmetic:
     \item if \(t_1\) and \(t_2\) are terms, then \((t_1+t_2)\) and \((t_1\cdot t_2)\) also are terms;
     \item atomic formulas are built only as \((t1=t2)\), where \(t_1\) and \(t_2\) are terms.
 \end{inparaenum}
-\end{ex}
+\end{example}
 
-\begin{ex}[]
+\begin{example}
 %\label{ex:}
 In the language of set theory, there are only two kinds of atomic formulas: \(x\) in \(y\) (\(x\in y\)), and \(x=y\) (where \(x\) and \(y\) are arbitrary variables).
-\end{ex}
+\end{example}
 In the language of first-order arithmetic, even by using the only available predicate constant ``\(=\)'', atomic formulas can express a lot of clever things:
 
 \begin{itemize}
@@ -490,9 +490,9 @@ In the language of first-order arithmetic, even by using the only available pred
     \item \(\Big(\big((x+y)\cdot z\big)=\big((x\cdot z)+(y\cdot z)\big)\Big)\) (multiplication distributes over addition).
 \end{itemize}
 
-\begin{exer}
+\begin{exercise}
 As the next step, translate the following assertions into the language of first-order arithmetic (do not use abbreviations!): \(2\cdot 2=4\), \(2\cdot 2=5\), \((x+y)2 = x2+2xy+y2\).
-\end{exer}
+\end{exercise}
 
 \subsubsection*{(Compound) Formulas}
 
@@ -532,7 +532,7 @@ We define the notion of \term{formula} of our predicate language as follows:
     \item There are no other formulas.
 \end{enumerate}
 
-\begin{remark}[]
+\begin{remark}
 %\label{remark:}
 For the sake of readability, we will omit any parentheses as long as the meaning is clear.
 \end{remark}
@@ -542,7 +542,7 @@ Notes on Logic Notation on the Web by Peter Suber.
 
 \subsubsection{Knowledge representation by means of predicate languages}
 
-\begin{ex}[]
+\begin{example}
 %\label{ex:}
 Some simple examples of compound formulas in the language of first-order arithmetic:
 
@@ -563,9 +563,9 @@ Warning! Strictly speaking, the predicate symbols ``\(<\)'', ``\(>\)'', ``\(\leq
 \(\forall x\forall y(0<y \IMPLIES  \exists z\exists u(u<y \AND  x=y\cdot z+u))\) What does it mean?
 \end{tabular}
 \end{center}
-\end{ex}
+\end{example}
 
-\begin{ex}[]
+\begin{example}
 Some simple examples of compound formulas in the language of set theory:
 \begin{center}
 \begin{tabular}{l l}
@@ -581,7 +581,7 @@ Some simple examples of compound formulas in the language of set theory:
 & ``\(x\) is the union of \(y\) and \(z\)'' or \(x=y\cup z\)
 \end{tabular}
 \end{center}
-\end{ex}
+\end{example}
 
 Of course, \emph{having a predicate language is not enough} for expressing all of our knowledge formally, i.e., for communicating it to computers.
 Computers do not know in advance, for example, how to handle sexes.
@@ -833,18 +833,18 @@ In the axiom schemas \(L_1\)--\(L_{11}\) below, B, C and D are any formulas in t
 
 The first two axiom schemas L1, L2 represent the ``definition'' of the implication connective:
 
-\begin{ax}[]
+\begin{axiom}
 %\label{ax:}
 Let \(B,C\) be formulas of \(L\).
 Then \(B\IMPLIES (C\IMPLIES B)\).
-\end{ax}
+\end{axiom}
 (What does it mean?)
 
-\begin{ax}[]
+\begin{axiom}
 %\label{ax:}
 Let \(B,C,D\) be formulas of \(L\).
 Then \((B\IMPLIES (C\IMPLIES D))\IMPLIES ((B\IMPLIES C)\IMPLIES (B\IMPLIES D))\).
-\end{ax}
+\end{axiom}
 (What does it mean?).
 
 The following axiom schemas L3-L5 represent the ``definition'' of the AND-connective (conjunction):
@@ -1001,9 +1001,9 @@ this would yield only a proof of \([T]: A1, A2, \ldots , An, Q \vdash B\), i.e.,
 obtain the desired formal proof of \([T]: A1, A2, \ldots , An \vdash B\), we must insert not only Q itself, but the entire
 proof of Q! In this way we obtain the following
 
-\begin{thm}\label{131}
+\begin{theorem}\label{131}
 If there is a proof of \([T]: \derive{\{A_1, A_2, \ldots, A_n, Q\}}{B}\), and a proof of \([T]: \derive{\{A_1, A_2, \ldots, A_n\}}{Q}\), then there is a proof of \([T]: \derive{\{A_1, A_2, \ldots, A_n\}}{B}\).
-\end{thm}
+\end{theorem}
 \begin{proof}
 A proof of \([T]: \derive{\{A_1, A_2, \ldots, A_n, Q\}}{B}\) is a sequence of formulas \(F_1, F_2, \ldots, Q, \ldots, F_m, B\), and a proof of \([T]: \derive{\{A_1, A_2, \ldots, A_n\}}{Q}\) is some sequence of formulas \(G_1, G_2, \ldots , G_p, Q\).
 Let us replace \(Q\) by \(G_1, G_2, \ldots, G_p, Q\):
@@ -1017,11 +1017,11 @@ This sequence is a proof of \([T]: \derive{\{A_1, A_2, \ldots, A_n\}}{B}\).
 If, in some proof, hypotheses are not used at all, then we may write simply \([T]: \emptyset\derive{}{B}\), or even \(\derive{T}{B}\), and say that B is a \term{theorem} of theory \(T\).
 Of course, using axioms directly almost never can prove real complicated theorems. Still, we can retain our simple formal definition of the notion of theorem because of the following.
 
-\begin{cor}[]
+\begin{corollary}
 %\label{cor:}
 If there is a proof of [T]: A1, A2, \ldots , An \(\vdash\) B, and proofs of [T]: \(\vdash\) A1, [T]: \(\vdash\) A2, \ldots , [T]: \(\vdash\)
 An, then there is a proof of [T]: \(\vdash\) B.
-\end{cor}
+\end{corollary}
 \begin{proof}
 Immediately, by \cref{131}.
 \end{proof}
@@ -1070,7 +1070,7 @@ Brouwer's main objection was against non-constructive proofs which are enabled m
 
 --- To prove \(\exists\) xB(x) constructively, you must provide a particular value of x such that B(x) is true. To prove \(\exists\) xB(x) by using the classical logic, you are allowed to assume \(\forall\) x\(\neg\) B(x) as a hypothesis to derive a contradiction. Then, by the Law of the Excluded Middle \(\exists\) xB(x) v \(\neg\) \(\exists\) xB(x) you obtain \(\exists\) xB(x). Having only such a ``negative'' proof, you may be unable to find a particular x for which B(x) is true. Knowing that \(\exists\) xB(x) is ``true'' may inspire you to work on the problem, but it may appear useless, if you do not succeed\ldots
 
-\begin{note}[]
+\begin{note}
 %\label{}
 Note. Informally, we may regard existence assertions as ``huge disjunctions''. For example, in the language of first-order arithmetic, \(\exists\) xB(x) could be ``thought'' as B(0)vB(1)vB(2)v\ldots , i.e., as an infinite ``formula''. Thus, the above two theses are, in a sense, ``equivalent''.
 \end{note}
@@ -1117,17 +1117,17 @@ Unfortunately, G\"{o}del's incompleteness theorem says that fundamental mathemat
 either inconsistent or incomplete (see Mendelson [1997] or click here), i.e., none of them is "absolutely
 perfect".
 
-\begin{exer}[]
+\begin{exercise}
 %\label{}
 Re-formulate the above axiom system for a many-sorted predicate language (or, see Chapter 10. Many-Sorted first-order Logic, by Jean Gallier.)
-\end{exer}
+\end{exercise}
 
 \subsection{The Flavor of Proving Directly}
 
-\begin{thm}[]
+\begin{theorem}
 %\label{}
 \([L1, L2, MP]: \vdash A\IMPLIES A\) for any formula A.
-\end{thm}
+\end{theorem}
 What does it mean? It's the so-called reflexivity property of implication.
 
 The following sequence of formulas represents a proof of the formula A\IMPLIES A.
@@ -1398,7 +1398,7 @@ A2, \ldots , An, but not B! The last formula of this proof is B\IMPLIES C (becau
 proof [T, MP, Gen]: A1, A2, \ldots , An, B \(\vdash\) C). Thus, we have a proof [L1, L2, L14, T, MP, Gen]: A1, A2, \ldots ,
 An \(\vdash\) B\IMPLIES C. Q.E.D.
 
-\begin{exer}
+\begin{exercise}
 In some other textbooks, a somewhat different system of logical axioms is used: instead of the axioms \(L_{14}\), \(L_{15}\) and the Generalization rule the following two rules of inference are used:
 \begin{itemize}
     \item \(G\IMPLIES F(x) \vdash G\IMPLIES \forall xF(x)\) (\(\forall\)-Introduction),
@@ -1406,4 +1406,4 @@ In some other textbooks, a somewhat different system of logical axioms is used: 
 \end{itemize}
 Of course, here, \(G\) is a formula that does not contain \(x\) as a free variable. Verify that both systems are
 equivalent in all of their versions (minimal, constructive, and classical).
-\end{exer}
+\end{exercise}
